# sftool

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  README_EN.md  flake.nix  lefthook.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build-and-release.yml  builder.yml  builder_for_arm32.yml  check.yml
cross-helpscript/: install-deb.sh
nix/: sftool.nix
scripts/: validate_skills.py
sftool/: Cargo.toml  README.md  sftool_param_schema.json  stub_config_schema.json
sftool-lib/: Cargo.toml  README.md
sftool-lib/src/: erase_flash.rs  error.rs  lib.rs  progress.rs  ram_command.rs  ram_stub.rs  read_flash.rs  reset.rs  sifli_debug.rs  speed.rs  utils.rs  write_flash.rs
sftool-lib/src/common/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  serial_io.rs  sifli_debug.rs  speed.rs  write_flash.rs
sftool-lib/src/sf32lb52/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  sifli_debug.rs  speed.rs  write_flash.rs
sftool-lib/src/sf32lb55/: mod.rs  ram_command.rs
sftool-lib/src/sf32lb56/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  sifli_debug.rs  speed.rs  write_flash.rs
sftool-lib/src/sf32lb57/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  sifli_debug.rs  speed.rs  write_flash.rs
sftool-lib/src/sf32lb58/: erase_flash.rs  mod.rs  ram_command.rs  read_flash.rs  reset.rs  speed.rs  write_flash.rs
sftool-lib/tests/: cancel_token_test.rs  sf32lb57_stub_test.rs  utils_test.rs
sftool/src/: cli.rs  config.rs  config_exec.rs  main.rs  progress.rs  serial.rs  stub_config_spec.rs  stub_ops.rs
skills/sftool/: SKILL.md
skills/sftool/assets/: base-config.json  read-flash-config.json  write-flash-config.json
skills/sftool/references/: commands.md  config-examples.md  troubleshooting.md
