[package]
name = "sftool"
version = "0.1.12"
edition = "2024"
description = "SiFli SoC serial utility command-line tool"
license = "Apache-2.0"
documentation = "https://docs.rs/sftool"
repository = "https://github.com/OpenSiFli/sftool"
readme = "README.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
sftool-lib = { version = "0.1.4" ,path = "../sftool-lib" ,features = ["cli"] }
strum = {version = "0.27.1",features = ["derive"]}
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serialport = "4.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.11"
